Better Error message formatting in flake8-nb

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,4 @@ repos:
     hooks:
       - id: flake8-nb
         files: ".ipynb"
+        args: ["--notebook-cell-format", "{nb_path}#In[{code_cell_count}]"]
